# my-first-actix

./: .env  Cargo.toml  Makefile  My First Actix Client.http  README.md
src/: main.rs
src/models/: game.rs
src/routes/: config.rs  game_routes.rs  health_routes.rs  mod.rs
